<resources>
    // App name
    <string name="app_name">VidereX</string>
    // MenuActivity
    <string name="SelectRouteButton">Record Route</string>
    <string name="FollowRouteButton">Follow Route</string>
    <string name="singleMatch">Single Match</string>
    // SingleMatchActivity
    <string name="goalImageView">Goal image</string>
    <string name="differenceImageView">Difference image</string>
    <string name="diffVal"> </string>
    <string name="azimuth">azimuth</string>
    <string name="pitch">pitch</string>
    <string name="roll">roll</string>
    <string name="matchQuality"> </string>
    // RecordRouteActivity
    <string name="viewCount">Stored views</string>
    <string name="startRoute">Record Route</string>
    <string name="finishRoute">Save Route</string>
    <string name="routeName"> </string>
    <string name="routeNamePlaceholder">i.e Home path</string>
    // FollowRouteActivity
    // SelectRouteActivity
    <string-array name="RoutNames">
        <item>test route 1</item>
        <item>test route 2</item>
        <item>test route 3</item>
    </string-array>
    // Show routes activity
    <string name="changeImageButton">Change</string>
    <string name="placeholder"> </string>
    <string name="extractFrames">Extract frames</string>
    <string name="sendFrames">Follow Route</string>
    <string name="saveRoute">Save Route</string>
    <string name="fetchRoutes">Fetch Route</string>
    <string name="refresh">Refresh</string>
    <string name="utterance"></string>

    //Content description
    <string name="JavaCameraView">Java camera view</string>
    <string name="differenceValue">Difference value</string>
    <string name="diffChart">Difference value chart</string>
    <string name="Speech">Speech</string>
    <string name="detected">Detected utterance</string>
    <string name="routeList">Route list</string>
    <string name="thrDesc">Threshold bar</string>
    <string name="thrDescValue">Threshold value</string>
    <string name="VideoView">Video taken</string>
    <string name="EnterRouteName">Enter RouteName</string>
    <string name="pogBar">Progress bar</string>
    <string name="bestmatch">bestMatch</string>


</resources>