<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoRecordRoute">

    <VideoView
        android:id="@+id/routeVideo"
        android:layout_width="378dp"
        android:layout_height="257dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/VideoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/extractFramesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/extractFrames"
        android:text="@string/extractFrames"
        app:layout_constraintStart_toEndOf="@+id/routeVideo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendFrames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/FollowRouteButton"
        android:text="@string/sendFrames"
        app:layout_constraintStart_toEndOf="@+id/routeVideo"
        app:layout_constraintTop_toBottomOf="@+id/extractFramesButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/saveRoute"
        android:text="@string/saveRoute"
        app:layout_constraintStart_toEndOf="@id/routeVideo"
        app:layout_constraintTop_toBottomOf="@+id/sendFrames" />


    <EditText
        android:id="@+id/routeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="28dp"
        android:autofillHints="@string/routeNamePlaceholder"
        android:contentDescription="@string/EnterRouteName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/routeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeVideo"
        tools:ignore="LabelFor" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="191dp"
        android:layout_height="23dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/pogBar"
        android:progress="0"
        app:layout_constraintStart_toEndOf="@+id/routeName"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>