<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowRouteActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/MainCameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/JavaCameraView"
        opencv:camera_id="0"
        opencv:show_fps="true" />

    <TextView
        android:id="@+id/difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/differenceValue"
        android:text="@string/diffVal"
        opencv:layout_constraintLeft_toLeftOf="@id/MainCameraView"
        opencv:layout_constraintTop_toTopOf="@id/MainCameraView" />

</androidx.constraintlayout.widget.ConstraintLayout>