<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordRouteActivity">

    <TextView
        android:id="@+id/viewCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/viewCount"
        opencv:layout_constraintEnd_toEndOf="parent"
        opencv:layout_constraintStart_toStartOf="parent"
        opencv:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/startRoute"
        opencv:layout_constraintEnd_toEndOf="parent"
        opencv:layout_constraintStart_toStartOf="parent"
        opencv:layout_constraintTop_toBottomOf="@+id/routeName" />

    <Button
        android:id="@+id/finishRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/finishRoute"
        opencv:layout_constraintEnd_toEndOf="parent"
        opencv:layout_constraintStart_toStartOf="parent"
        opencv:layout_constraintTop_toBottomOf="@+id/startRoute" />

    <EditText
        android:id="@+id/routeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/routeNamePlaceholder"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/routeName"
        opencv:layout_constraintEnd_toEndOf="parent"
        opencv:layout_constraintHorizontal_bias="0.499"
        opencv:layout_constraintStart_toStartOf="parent"
        opencv:layout_constraintTop_toBottomOf="@+id/viewCount"
        tools:ignore="LabelFor" />

<!--    <ImageView-->
<!--        android:id="@+id/testView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        opencv:layout_constraintBottom_toBottomOf="parent"-->
<!--        opencv:layout_constraintStart_toStartOf="parent"-->
<!--        tools:srcCompat="@tools:sample/avatars" />-->

</androidx.constraintlayout.widget.ConstraintLayout>