<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowRoutes">

    <org.opencv.android.JavaCameraView
        android:id="@+id/OpenCVCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        opencv:camera_id="2"
        opencv:show_fps="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/goalView"
        android:layout_width="131dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/goalImageView"
        opencv:layout_constraintBottom_toBottomOf="@id/OpenCVCamera"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/differenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diffVal"
        android:textColor="#FF0000"
        opencv:layout_constraintRight_toRightOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

    <TextView
        android:id="@+id/azimut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/azimuth"
        android:textColor="#FFFFFF"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

    <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/roll"
        android:textColor="#FFFFFF"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/pitch"
        android:textColor="#FFFFFF"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

    <TextView
        android:id="@+id/routeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:layout_marginTop="32dp"
        android:text="@string/placeholder"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

    <!--    <Button-->
<!--        android:id="@+id/changeImage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="322dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        android:text="@string/changeImageButton"-->
<!--        opencv:layout_constraintBottom_toBottomOf="@id/OpenCVCamera"-->
<!--        opencv:layout_constraintRight_toRightOf="@id/OpenCVCamera" />-->
</androidx.constraintlayout.widget.ConstraintLayout>