<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleMatchActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/OpenCVCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        opencv:camera_id="2"
        opencv:show_fps="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/goalView"
        android:layout_width="131dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/goalImageView"
        opencv:layout_constraintBottom_toBottomOf="@id/OpenCVCamera"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/differenceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/differenceImageView"
        opencv:layout_constraintBottom_toBottomOf="@id/OpenCVCamera"
        opencv:layout_constraintLeft_toLeftOf="@id/OpenCVCamera"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/differenceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/diffVal"
        android:textColor="#FF0000"
        opencv:layout_constraintRight_toRightOf="@id/OpenCVCamera"
        opencv:layout_constraintTop_toTopOf="@id/OpenCVCamera" />

<!--    <ImageView-->
<!--        android:id="@+id/testView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="0dp"-->
<!--        tools:srcCompat="@tools:sample/cities" />-->

</androidx.constraintlayout.widget.ConstraintLayout>